# dprint-plugin-shebang

./: .dprint.jsonc  .lefthook.yaml  Cargo.toml  LICENSE  README.md
.config/: lefthook.yaml  mise.toml
.github/: renovate.json
.github/workflows/: autofix.yaml  ci.yaml  lint-commits.yaml  lint.yaml  release-plz.yaml  release.yaml  scorecard.yaml  test.yaml
src/: lib.rs
