[package]
name = "dprint-plugin-shebang"
version = "0.0.1"
authors = ["Ville Skyttä"]
edition = "2021"
description = "Script shebang line formatter plugin for dprint"
repository = "https://github.com/scop/dprint-plugin-shebang"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.97"
dprint-core = { version = "0.67.4", features = ["wasm"] }
lazy-regex = "3.4.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
