[package]
name = "dprint-plugin-shebang"
version = "0.0.1"
authors = ["Ville Skyttä"]
edition = "2024"
license = "MIT"
repository = "https://github.com/scop/dprint-plugin-shebang"
description = "Script shebang line formatter plugin for dprint"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.97"
dprint-core = { version = "0.68.0", features = ["wasm"] }
lazy-regex = "3.4.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
